k8s/app/service.yml
apiVersion: v1
kind: Service
metadata:
  namespace: basic-app
  name: k8s-fundamentos-basic-app-service
spec:
  type: NodePort
  selector:
    app: k8s-fundamentos-basic-app
  ports:
    - protocol: TCP
      port: 3000
      # targetPort: 3000
