k8s/app/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: basic-app
  name: k8s-fundamentos-basic-app-ingress
  # annotations:
    # nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - host: "basic-app.test"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: k8s-fundamentos-basic-app-service
            port:
              number: 3000
